#13.0 Template, Form, Url, Setup

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block page_name %}{% endblock %}| Nbnb</title>
+    <title>{% block page_title %}{% endblock %}| Nbnb</title>
 </head>
 <body>
     {% include "partials/header.html" %}
