--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% block page_name %}
-    Home
+{% block page_title %}
+    {{ room.name }}
 {% endblock %}
 
 {% block content %}
