#20.0 Sizes in Tailwind-#20.4 Extending Tailwind

--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -4,6 +4,9 @@
 {% endblock %}
 
 {% block content %}
+    <div class="container rounded-xl mx-auto bg-gray-800 h-50vh mt-32 mb-24 bg-cover bg-centerg" style="background-image:url(https://images.unsplash.com/photo-1517166988974-5e377975dd67?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1121&q=80)">
+
+    </div>
 
     {{ now }}
 
