--- a/templates/base.html
+++ b/templates/base.html
@@ -8,14 +8,19 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>{% block page_title %}{% endblock %}| Nbnb</title>
 </head>
-<body>
-    <header>
+<body class="text-gray-800 mt-24">
+    <header class="container max-w-full inset-0 flex items-center justify-between px-6 h-16 border-b border-gray-400 fixed bg-white">
+        <div class="flex items-center w-1/3">
+            <a href="{% url "core:home" %}" class="mr-6">
+                <img class="w-10" src="{% static 'img/logo.png' %}"/>
+            </a>
+            {% block search-bar%}
+                <form method="get" action="{% url "rooms:search" %}" class="w-9/12">
+                    <input class="search-box border font-medium text-gray-900 placeholder-gray-600 w-full px-5 py-3 rounded-sm w-64 shadow-md hover:shadow-lg focus:outline-none" value="" name="city" placeholder="Search by City"/>
+                </form>
+            {% endblock search-bar%}
+        </div>
         {% include "partials/nav.html" %}
-        {% block search-bar%}
-            <form method="get" action="{% url "rooms:search" %}">
-                <input value="" name="city" placeholder="Search by City"/>
-            </form>
-        {% endblock %}
     </header>
 
     {% block content %}{% endblock %}
