--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,8 +1,7 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
 
-.search-box{
+.search-box {
   transition: box-shadow 0.2s linear;
 }
 
@@ -15,3 +14,30 @@
     @apply border-gray-600;
   }
 }
+
+.btn {
+  @apply text-center rounded-sm py-5 font-light text-lg w-full;
+}
+
+input {
+  @apply rounded-sm py-5 font-light text-lg w-full text-left border border-gray-600 px-5;
+  &:focus{
+    @apply outline-none border-teal-500;
+  }
+}
+
+form{
+  .input {
+    @apply mb-3 w-full;
+    &.has_error{
+      input{
+        @apply bg-red-200 border-gray-600;
+        &:focus {
+          @apply border-gray-600;
+        }
+      }
+    }
+  }
+}
+
+@tailwind utilities;
