--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -8,12 +8,14 @@
 {% endblock search-bar %}
 
 {% block content %}
+    <div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center border p-6 border-gray-400">
+        {% include 'partials/social_login.html' %}
 
-    {% include 'partials/social_login.html' %}
+        {% include 'mixins/auth/auth_form.html' with form=form cta="Sign up" %}
+        <div class="mt-3">
+            <span class="mr-2">Have an account?</span>
+            <a href="{% url 'users:login' %}" class="text-teal-500">Log in</a>
+        </div>
 
-    <form method="POST" action="{% url "users:signup" %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button>Sign Up</button>
-    </form>
+    </div>
 {% endblock content %}
