--- a/templates/users/update-profile.html
+++ b/templates/users/update-profile.html
@@ -12,8 +12,12 @@
 
         {% include 'mixins/auth/auth_form.html' with form=form cta="Update Profile" %}
 
-        <div class="mt-3">
-            <a href="#" class="text-teal-500">Change Password</a>
-        </div>
+        {{ object.login_method }}
+
+        {% if object.login_method == "email" %}
+            <div class="mt-5">
+                <a href="{% url 'users:password' %}" class="text-teal-500">Change Password</a>
+            </div>
+        {% endif %}
     </div>
 {% endblock content %}
