--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +18,11 @@
             </a>
             {% block search-bar%}
                 <form method="get" action="{% url "rooms:search" %}" class="w-9/12">
-                    <input class="search-box border font-medium text-gray-900 placeholder-gray-600 w-full px-5 py-3 rounded-sm w-64 shadow-md hover:shadow-lg focus:outline-none" value="" name="city" placeholder="Search by City"/>
+                    <input
+                            class="search-box border font-medium text-gray-900 placeholder-gray-600 w-full px-5 py-3 rounded-sm w-64 shadow-md hover:shadow-lg focus:outline-none" value=""
+                            name="city"
+                            placeholder="{% trans "Search by City" %}"
+                    />
                 </form>
             {% endblock search-bar%}
         </div>
