--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load is_booked %}
+{% load is_booked i18n %}
 
 {% block page_title %}
     {{ room.name }}
@@ -29,6 +29,7 @@
                     <span class="mt-2 text-gray-500">{{ room.host.first_name }}</span>
                 </a>
             </div>
+            <a class="btn-link block mb-10 w-2/6" href="{% url 'lists:save-room' room.pk %}">{% trans "Save to Favorites" %}</a>
             <div class="flex border-section">
                 <span class="mr-5 font-light">{{ room.room_type }}</span>
                 <span class="mr-5 font-light">{{ room.beds }} bed{{ room.beds|pluralize }}</span>
@@ -94,30 +95,31 @@
             {% else %}
                 {% if not request.session.is_hosting %}
                     {% for calendar in  room.get_calendars %}
-                     <div class="mb-20">
-                         <span class="text-center font-semibold text-lg block mb-8">{{ calendar.get_month }} / {{ calendar.year}}</span>
-                         <div class="cal-grid font-medium mb-4">
-                             {% for day in calendar.day_names %}
-                                 <span>{{ day }}</span>
-                             {% endfor %}
-                         </div>
-                         <div class="cal-grid">
-                             {% for day in calendar.get_days %}
-                                 {% is_booked room day as is_booked_bool %}
-                                 {% if day.number != 0 %}
-                                     {% if day.past %}
-                                         <span class="cal-number bg-gray-200 text-gray-400">{{day}}</span>
-                                     {% elif is_booked_bool %}
-                                         <span class="cal-number bg-gray-200 text-gray-400 line-through">{{day}}</span>
-                                     {% else %}
-                                         <a href="{% url 'reservations:create' room.pk day.year day.month day.number %}" class="cal-number bg-gray-200 text-gray-700 hover:bg-teal-400 hover:text-white hover:font-medium">{{day}}</a>
-                                     {% endif %}
-                                 {% else %}
-                                     <span></span>
-                                 {% endif %}
-                             {% endfor %}
-                         </div>
-                     </div>
+                        <div class="mb-20">
+                            <span class="text-center font-semibold text-lg block mb-8">{{ calendar.get_month }} / {{ calendar.year }}</span>
+                            <div class="cal-grid font-medium mb-4">
+                                {% for day in calendar.day_names %}
+                                    <span>{{ day }}</span>
+                                {% endfor %}
+                            </div>
+                            <div class="cal-grid">
+                                {% for day in calendar.get_days %}
+                                    {% is_booked room day as is_booked_bool %}
+                                    {% if day.number != 0 %}
+                                        {% if day.past %}
+                                            <span class="cal-number bg-gray-200 text-gray-400">{{ day }}</span>
+                                        {% elif is_booked_bool %}
+                                            <span class="cal-number bg-gray-200 text-gray-400 line-through">{{ day }}</span>
+                                        {% else %}
+                                            <a href="{% url 'reservations:create' room.pk day.year day.month day.number %}"
+                                               class="cal-number bg-gray-200 text-gray-700 hover:bg-teal-400 hover:text-white hover:font-medium">{{ day }}</a>
+                                        {% endif %}
+                                    {% else %}
+                                        <span></span>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                        </div>
                     {% endfor %}
                 {% endif %}
             {% endif %}
